<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>4.0.6</version>
    </parent>

    <groupId>cn.procsl</groupId>
    <artifactId>ping</artifactId>
    <packaging>pom</packaging>
    <version>1.0.1</version>

    <properties>
         <java.version>25</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
        <compiler.version>${java.version}</compiler.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springboot.version>4.0.6</springboot.version>
        <springdoc.version>2.5.0</springdoc.version>
        <mapstruct.version>1.5.3.Final</mapstruct.version>
        <google.auto.version>1.1.1</google.auto.version>
        <manifold.version>2024.1.16</manifold.version>
        <web.server.port>10000</web.server.port>
        <spring-dev>false</spring-dev>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    </properties>

    <modules>
        <module>ping-parent</module>
        <module>ping-common</module>
        <module>ping-web</module>
        <module>ping-jpa</module>
        <module>ping-connect</module>
    </modules>

    <name>Ping 父模块</name>

    <dependencyManagement>

        <dependencies>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <scope>provided</scope>
                <optional>true</optional>
            </dependency>


            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-common</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-jpa</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-web</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-system</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-captcha</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-connect</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-product</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.javafaker</groupId>
                <artifactId>javafaker</artifactId>
                <version>1.0.2</version>
                <scope>test</scope>
                <optional>true</optional>
                <exclusions>
                    <exclusion>
                        <groupId>org.yaml</groupId>
                        <artifactId>snakeyaml</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.github.jsonzou</groupId>
                <artifactId>jmockdata</artifactId>
                <version>4.3.0</version>
                <scope>test</scope>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service</artifactId>
                <version>${google.auto.version}</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>io.socket</groupId>
                <artifactId>socket.io-server</artifactId>
                <version>4.0.2.ping</version>
            </dependency>

            <dependency>
                <groupId>io.seruco.encoding</groupId>
                <artifactId>base62</artifactId>
                <version>0.1.3</version>
            </dependency>

            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>2.9.2</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.github.houbb</groupId>
                <artifactId>junitperf</artifactId>
                <version>2.0.7</version>
                <scope>test</scope>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>systems.manifold</groupId>-->
        <!--            <artifactId>manifold-rt</artifactId>-->
        <!--            <version>${manifold.version}</version>-->
        <!--        </dependency>-->

    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <!-- 默认绑定阶段initialize -->
                        <phase>initialize</phase>
                        <goals>
                            <!-- 目标：revision -->
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- 检查的仓库根目录，${project.basedir}：项目根目录，即包含pom.xml文件的目录 -->
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <!-- false：扫描路径时不打印更多信息，默认值false，可以不配置 -->
                    <verbose>false</verbose>
                    <!-- 定义插件中所有时间格式，默认值：yyyy-MM-dd’T’HH:mm:ssZ -->
                    <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
                    <!-- git属性文件中各属性前缀，默认值git，可以不配置 -->
                    <prefix>git</prefix>
                    <!-- 生成git属性文件，默认false：不生成 -->
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <!-- 生成git属性文件路径及文件名，默认${project.build.outputDirectory}/git.properties -->
                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
                    </generateGitPropertiesFilename>
                    <!-- 生成git属性文件格式，默认值properties -->
                    <format>json</format>
                    <!-- 配置git-describe命令 -->
                    <gitDescribe>
                        <skip>false</skip>
                        <always>false</always>
                        <dirty>-dirty</dirty>
                    </gitDescribe>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <generatedSourcesDirectory>
                        ${project.build.directory}/generated-sources/java
                    </generatedSourcesDirectory>
                    <compilerVersion>${compiler.version}</compilerVersion>

                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>

                        <!--                        <path>-->
                        <!--                            <groupId>systems.manifold</groupId>-->
                        <!--                            <artifactId>manifold</artifactId>-->
                        <!--                            <version>${manifold.version}</version>-->
                        <!--                        </path>-->

                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>

                        <path>
                            <groupId>cn.procsl</groupId>
                            <artifactId>ping-apt</artifactId>
                            <version>${project.version}</version>
                        </path>

                        <path>
                            <groupId>com.google.auto.service</groupId>
                            <artifactId>auto-service</artifactId>
                            <version>${google.auto.version}</version>
                        </path>

                        <path>
                            <groupId>org.hibernate.orm</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <!--                            <version>${hibernate.version}</version>-->
                            <version>6.5.3.Final</version>
                        </path>

                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${springboot.version}</version>
                        </path>

                        <path>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-context-indexer</artifactId>
                            <version>${spring-framework.version}</version>
                        </path>

                    </annotationProcessorPaths>

                    <verbose>true</verbose>
                    <showWarnings>true</showWarnings>
                    <!--                    <fork>true</fork>-->
                    <!--保留参数名称-->
                    <maxmem>2048m</maxmem>
                    <compilerArgs>
                        <arg>-g</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:deprecation</arg>
                        <arg>-parameters</arg>
                        <arg>-proc:full</arg>
                        <!--                        <arg>-Xplugin:Manifold</arg>-->
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>utf-8</encoding>
                    <!-- 解决Spring boot引起的profile失效问题 -->
                    <useDefaultDelimiters>true</useDefaultDelimiters>
                    <!-- 过滤后缀为p12、pem、pfx的证书文件 -->
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>p12</nonFilteredFileExtension>
                        <nonFilteredFileExtension>cer</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pem</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pfx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>jkx</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>

        </plugins>

        <finalName>${project.artifactId}-${project.version}</finalName>

        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>*.jks</exclude>
                    <exclude>*.pfx</exclude>
                    <exclude>*.txt</exclude>
                </excludes>
            </testResource>
        </testResources>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>*.jks</exclude>
                    <exclude>*.pfx</exclude>
                    <exclude>*.txt</exclude>
                </excludes>

            </resource>
        </resources>

    </build>

    <url>https://www.procsl.cn</url>

    <distributionManagement>
        <site>
            <id>ping</id>
            <url>https://github.com/procsl/ping</url>
        </site>
    </distributionManagement>


    <description>
        Ping项目, 基于DDD思想设计
    </description>


</project>
